--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
   "homepage": "https://github.com/ericlathrop/github-backup",
   "dependencies": {
     "bluebird": "^2.3.2"
+    "request-json": "x",
+    "async": "x",
   },
   "devDependencies": {
     "jshint": "^2.5.5"
