--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
   "dependencies": {
     "bluebird": "^2.3.2"
     "request-json": "x",
-    "async": "x",
+    "async": "x"
   },
   "devDependencies": {
     "jshint": "^2.5.5"
