--- a/package.json
+++ b/package.json
@@ -24,7 +24,7 @@
   },
   "homepage": "https://github.com/ericlathrop/github-backup",
   "dependencies": {
-    "bluebird": "^2.3.2"
+    "bluebird": "^2.3.2",
     "request-json": "x",
     "async": "x"
   },
